# trussed-se050-backend

./: CHANGELOG.md  Cargo.toml  FILESYSTEM.md  Makefile  README.md
.github/workflows/: cd-test.yml  cd.yml  ci.yml
extensions/se050-manage/: CHANGELOG.md  Cargo.toml
extensions/se050-manage/src/: lib.rs
src/: core_api.rs  lib.rs  manage.rs  migrate.rs  namespacing.rs  staging.rs  trussed_auth_impl.rs
src/core_api/: ecdsa_der.rs
src/manage/: se050_tests.rs
src/staging/: hpke.rs
src/trussed_auth_impl/: data.rs
