[workspace]
members = ["extensions/se050-manage"]

[workspace.package]
authors = ["Nitrokey GmbH <info@nitrokey.com>"]
edition = "2021"
repository = "https://github.com/Nitrokey/trussed-se050-backend"
license = "Apache-2.0 OR MIT"

[package]
name = "trussed-se050-backend"
version = "0.3.6"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[workspace.dependencies]
serde = { version = "1.0.185", default-features = false, features = ["derive"] }
trussed-core = { version = "0.1.0", features = ["serde-extensions"] }

[dependencies]
serde.workspace = true
trussed-core = { workspace = true, features = ["brainpoolp256r1", "brainpoolp384r1", "brainpoolp512r1", "chacha8-poly1305", "crypto-client", "ed255", "p256", "p384", "p521", "secp256k1", "x255"] }

se05x = { version  = "0.1.5", features = ["serde", "builder"] }
trussed = { version = "0.1.0", default-features = false, features = ["chacha8-poly1305", "crypto-client", "serde-extensions"] }
trussed-auth = "0.4"
trussed-auth-backend = "0.1"
trussed-manage = "0.2.0"
trussed-se050-manage = "0.2.0"
trussed-wrap-key-to-file = "0.2.0"
trussed-hpke = "0.2.0"
delog = "0.1.6"
embedded-hal = "0.2.7"
hkdf = { version = "0.12.3", default-features = false }
sha2 = { version = "0.10.7", default-features = false }
hex-literal = "0.4.1"
serde-byte-array = "0.1.2"
iso7816 = "0.1.1"
hmac = "0.12.1"
rand = { version = "0.8.5", default-features = false }
littlefs2-core = "0.1.0"
cbor-smol = { version = "0.5.0", features = ["heapless-bytes-v0-3"] }
serde_bytes = { version = "0.11.12", default-features = false }
trussed-rsa-alloc = "0.2.1"
postcard = "0.7.3"
crypto-bigint = { version = "0.5.3", default-features = false }
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa-core"] }
salty = "0.3.0"
p256-cortex-m4 = { version = "0.1.0-alpha.6", features = ["prehash", "sec1-signatures"] }
bitflags = "2.5.0"
der = "0.7.9"
chacha20poly1305 = { version = "0.10.1", default-features = false }

[dev-dependencies]
admin-app = { version = "0.1.0", features = ["migration-tests"] }
serde_test = "1.0.176"

[patch.crates-io]
trussed = { git = "https://github.com/trussed-dev/trussed.git", rev = "6bba8fde36d05c0227769eb63345744e87d84b2b" }
trussed-auth-backend = { git = "https://github.com/trussed-dev/trussed-auth", tag = "v0.4.0" }
trussed-rsa-alloc = { git = "https://github.com/trussed-dev/trussed-rsa-backend.git", rev = "743d9aaa3d8a17d7dbf492bd54dc18ab8fca3dc0" }
admin-app = { git = "https://github.com/Nitrokey/admin-app.git", rev = "d5f1c6df405e4edeb6524f908c1c713139173e81" }

trussed-se050-manage = { path = "extensions/se050-manage" }

[features]
log-all = []
log-none = []
log-info = []
log-trace = []
log-debug = []
log-warn = []
log-error = []
