[workspace]
members = ["extensions/se050-manage"]

[workspace.package]
authors = ["Nitrokey GmbH <info@nitrokey.com>"]
edition = "2021"
repository = "https://github.com/Nitrokey/trussed-se050-backend"
license = "Apache-2.0 OR MIT"

[package]
name = "trussed-se050-backend"
version = "0.7.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[workspace.dependencies]
serde = { version = "1.0.185", default-features = false, features = ["derive"] }
trussed-core = { version = "0.2", features = ["serde-extensions"] }

[dependencies]
serde.workspace = true
trussed-core = { workspace = true, features = ["brainpoolp256r1", "brainpoolp384r1", "brainpoolp512r1", "chacha8-poly1305", "crypto-client", "ed255", "p256", "p384", "p521", "rsa2048", "rsa3072", "rsa4096", "secp256k1", "x255"] }

se05x = { version  = "0.4", features = ["serde", "builder"] }
trussed = { version = "0.1.0", default-features = false, features = ["chacha8-poly1305", "crypto-client", "serde-extensions"] }
trussed-auth = "0.5"
trussed-auth-backend = "0.1"
trussed-manage = "0.3.0"
trussed-se050-manage = "0.3.0"
trussed-wrap-key-to-file = "0.3.0"
trussed-hpke = "0.3.0"
delog = "0.1.6"
hkdf = { version = "0.12.3", default-features = false }
sha2 = { version = "0.10.7", default-features = false }
hex-literal = "0.4.1"
serde-byte-array = "0.1.2"
iso7816 = "0.2"
hmac = "0.12.1"
heapless = { version = "0.9.1", default-features = false }
rand = { version = "0.8.5", default-features = false }
littlefs2-core = "0.1.1"
cbor-smol = { version = "0.5.0", features = ["heapless-bytes-v0-5"] }
serde_bytes = { version = "0.11.12", default-features = false }
trussed-rsa-alloc = "0.4"
trussed-rsa-types = "0.2"
postcard = "0.7.3"
crypto-bigint = { version = "0.5.3", default-features = false }
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa-core"] }
salty = "0.3.0"
p256-cortex-m4 = { version = "0.1.0-alpha.6", features = ["prehash", "sec1-signatures"] }
bitflags = "2.5.0"
der = "0.7.9"
chacha20poly1305 = { version = "0.10.1", default-features = false }

[dev-dependencies]
admin-app = { version = "0.1.0", features = ["migration-tests"] }
serde_test = "1.0.176"

[patch.crates-io]
admin-app = { git = "https://github.com/Nitrokey/admin-app.git", tag = "v0.1.0-nitrokey.21" }
trussed = { git = "https://github.com/trussed-dev/trussed.git", rev = "0f8df68be879acdde1f8cf428c11e5d29692a47b" }
trussed-auth-backend = { git = "https://github.com/trussed-dev/trussed-auth", tag = "backend-v0.1.0" }
trussed-rsa-alloc = { git = "https://github.com/trussed-dev/trussed-rsa-backend.git", tag = "v0.4.0" }

trussed-se050-manage = { path = "extensions/se050-manage" }

[features]
log-all = []
log-none = []
log-info = []
log-trace = []
log-debug = []
log-warn = []
log-error = []
